<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <parent>
    <artifactId>ax.battler</artifactId>
    <groupId>ax.battler</groupId>
    <version>1.0-SNAPSHOT</version>
  </parent>
  <modelVersion>4.0.0</modelVersion>

  <artifactId>ax.battler.goldenaxe</artifactId>

  <properties>

    <mainClass>ax.battler.goldenaxe.Main</mainClass>
    <releaseName>golden-axe</releaseName>

  </properties>

  <build>
    <finalName>${releaseName}</finalName>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.10.1</version>
        <executions>
          <execution>
            <id>compile</id>
            <phase>compile</phase>
            <goals>
              <goal>compile</goal>
            </goals>
          </execution>
          <execution>
            <id>testCompile</id>
            <phase>test-compile</phase>
            <goals>
              <goal>testCompile</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <release>${java.release}</release>
          <compilerArgs>--enable-preview</compilerArgs>
          <forceJavacCompilerUse>true</forceJavacCompilerUse>
          <source>18</source>
          <target>18</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>${exec-plugin.version}</version>
        <configuration>
          <mainClass>${mainClass}</mainClass>
        </configuration>
        <executions>
          <execution>
            <id>start</id>
            <phase>none</phase>
            <goals>
              <goal>java</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-maven-plugin</artifactId>
        <version>0.0.5</version>
        <configuration>
          <mainClass>goldenaxe/ax.battler.goldenaxe.Main</mainClass>
          <stripDebug>true</stripDebug>
          <compress>2</compress>
          <noHeaderFiles>true</noHeaderFiles>
          <noManPages>true</noManPages>
          <launcher>goldenaxe</launcher>
          <jlinkImageName>goldenaxe</jlinkImageName>
          <jlinkZipName>goldenaxe</jlinkZipName>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.panteleyev</groupId>
        <artifactId>jpackage-maven-plugin</artifactId>
        <version>1.4.0</version>
        <configuration>
          <name>GoldenAxe</name>
          <appVersion>1.0.0</appVersion>
          <vendor>ax.battler</vendor>
          <module>goldenaxe/ax.battler.goldenaxe.Main</module>
          <runtimeImage>target/goldenaxe</runtimeImage>
          <modulePath>${java.home}/jmods</modulePath>
          <destination>target/dist</destination>
          <linuxShortcut>true</linuxShortcut>
          <linuxPackageName>goldenaxe</linuxPackageName>
          <linuxAppCategory>Games</linuxAppCategory>
          <linuxMenuGroup>Games</linuxMenuGroup>
          <icon>${project.basedir}/logo.png</icon>
          <javaOptions>
            <option>-Dfile.encoding=UTF-8</option>
          </javaOptions>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
